--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 									<p>There is Something profoundly satisfying
 										sharing a meal, eating together,
 										breaking bread together is one of<br>
-										oldest and one of the fundermentally unifying people advent</p> 
+										oldest and one of the fundermentally unifying people adventure</p> 
 										<form>
 							
 										<input type="email" placeholder="Email">
